Add Docker image for Julia client

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,3 +5,7 @@ services:
     environment:
       DOCKER_STACKS_JUPYTER_CMD: nbconvert
       NOTEBOOK_ARGS: --execute --to markdown --stdout client.ipynb
+  julia-client:
+    environment:
+      DOCKER_STACKS_JUPYTER_CMD: nbconvert
+      NOTEBOOK_ARGS: --execute --to markdown --stdout client.ipynb
