--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Run tests
+      - name: Build image
         run: docker-compose build ${{ matrix.client }}
 
       - name: Login to GitHub Container Registry
